# fyyd-api

./: .editorconfig  .gitignore  .justfile  .treefmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile  rust-toolchain.toml
docs/: CONTRIBUTING.md
fyyd-api/: Cargo.toml
fyyd-api/examples/: fyyd_async.rs
fyyd-api/src/: lib.rs  result.rs  v2.rs
fyyd-api/src/v2/: fyyd_api.rs
fyyd-types/: Cargo.toml
fyyd-types/src/: lib.rs  v2.rs
fyyd-types/src/v2/: fyyd_response.rs
