# # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Alexander Kenji Berthold <aks.kenji@protonmail.com>" ]

readme = "README.md"
repository = "https://gitlab.com/akenji/fyyd-api"
documentation = "https://gitlab.com/akenji/fyyd-api"
homepage = "https://gitlab.com/akenji/fyyd-api"

keywords = [
	"podcasting",
	"api",
	"podcast",
	"search",
	"fyyd",
]

categories = ["api-bindings", "multimedia::audio", "multimedia"]

[workspace]
members = [
	"fyyd-api",
	"fyyd-types",
]
