[package]
authors = ["Alexander Kenji Berthold <aks.kenji@protonmail.com>" ]
name = "fyyd-api"
version = "0.1.0"
edition = "2021"
licence = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fyyd-types = { path = "../fyyd-types/", version = "0.1.0" }
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0"
