[package]
name = "fyyd-api"
version = "0.1.2"
description = "Bindings to the fyyd api."
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fyyd-types = { version = "0.1.1" }
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
# see https://doc.rust-lang.org/nightly/rustdoc/scraped-examples.html
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
