[package]
name = "fyyd-types"
version = "0.1.0"
licence = "MIT"
authors.workspace = true
edition.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0"
