[package]
name = "fyyd-types"
version = "0.1.2"
description = "Types for the fyyd-api crate."
edition = "2021"
license = "MIT"
authors = ["Alexander Kenji Berthold <aks.kenji@protonmail.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
# see https://doc.rust-lang.org/nightly/rustdoc/scraped-examples.html
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
